@@ -11,6 +11,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt update --fix-missing
 RUN DEBIAN_FRONTEND=noninteractive apt install -y --fix-missing \
     tzdata \
     git \
+    vim \
     bash-completion \
     php$php_var \
     php$php_var-curl \
