@@ -226,8 +226,10 @@ class RuleCallContext extends CallContext
 
                 if( is_string($subValue) )
                     $output .= htmlspecialchars($subValue);
-                else
+                elseif( is_object($subValue) )
                     $output .= htmlspecialchars($subValue->name());
+                else
+                    $output .= "";
             }
         }
         else
